--- a/config/config.json
+++ b/config/config.json
@@ -1,11 +1,8 @@
 {
   "development": {
-    "username": "root",
-    "password": null,
-    "database": "database_development",
-    "host": "127.0.0.1",
-    "dialect": "mysql",
-    "operatorsAliases": false
+    "url": "postgres://msrdupam:e--kbROCDZzHwwgbmGQxiEwzim6rZYTr@balarama.db.elephantsql.com:5432/msrdupam",
+    "dialect": "postgres",
+    "operatorsAliases": "0"
   },
   "test": {
     "username": "root",
